change read&writeAccounts to use the user home dir to read and write files from